client/vite-project/src/components/quote-details/QuoteDetails.module.scss
.quote__details__container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 3fr, 100px, 3fr, 100px, 1fr;
    width: 80vw;
    margin: 0 auto;
}

.heading__container {
    grid-row: 1 / 2;
    grid-column: 1 / -1;
    align-self: center;
}

.back__button {
    grid-row: 2 / 3;
    grid-column: 1 / 2;
    justify-self: start;
    align-self: start;
}

.likes__details {
    grid-row: 2 / 3;
    grid-column: 3 / 4;
    justify-self: end;
    align-self: start;
}

.quote__details {
    grid-row: 3 / 4;
    grid-column: 1 / -1;
    display: flex;
    flex-direction: column;
    justify-content: space-around;

    &__text {
        font-weight: 300;
        line-height: 1.3;
        width: 80%;
        align-self: center;
    }

    &__author {
        font-size: .8rem;
        font-weight: 300;
        align-self: end;
    }
}

.action__buttons {
    grid-row: 4 / 5;
    grid-column: 2 / 3;
}

.social__sharing {
    grid-row: 5 / 6;
    grid-column: 3 / 4;
    align-self: end;
    justify-self: end;
}

